# TimeSeries

./: .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
notebooks/: 01-forecasting.ipynb  02-probabilistic.ipynb
ui/: datasets.py  forecasting.py
