[tool.poetry]
name = "timeseries"
version = "0.1.0"
description = ""
authors = ["yeungadrian <yeungadrianjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
sktime = "^0.31.0"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
